# chat-superviser-bot

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  env.example  pyproject.toml  start.sh  tox.ini
src/: handlers.py  logic.py  main.py  models.py  redis.py  settings.py  utils.py
